--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="homepage.css">
   </head>
   <body>
-  	<script type="text/javascript" src="https://raw.github.com/mrdoob/three.js/master/build/three.js"></script> 
+  	<script type="text/javascript" src="three.js"></script> 
   	<script type="text/javascript" src="LawsonGeometry.js"></script> 
   	<script type="text/javascript" src="lawson.js"></script> 
   	
@@ -16,7 +16,7 @@
 		    <h1>Blake Courter</h1>
 		  
 		    <h2>Work</h2>
-		    <p>CAD Software Business Professional</p>
+		    <p>Product Manager, GrabCAD</p>
 		      
 		    <h2>Fun</h2>
 		    <p><a href="http://plus.google.com/photos/117370057999886815596/albums">Images of various projects</a></p>
