--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 		      
 		    <h2>Fun</h2>
 		    <p><a href="http://plus.google.com/photos/117370057999886815596/albums">Images of various projects</a></p>
-		    <p><a href="http://bubblegons.com/poincare">Poincar&eacute; Kaleidoscope</a></p>
+		    <p><a href="http://blakecourter.com/poincare">Poincar&eacute; Kaleidoscope</a></p>
+		    <p><a href="http://blakecourter.com/four">Four.js</a></p>
+		    <p><a href="http://penrosetriangle.com/">Penrose Triangle</a></p>
 		    <p><a href="http://github.com/bcourter">Github</a></p>
 		    
 		    <h2>Contact</h2>
