Fixed missed steps, interactive

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="homepage.css">
   </head>
   <body>
-  	<script type="text/javascript" src="three.js"></script> 
-  	<script type="text/javascript" src="LawsonGeometry.js"></script> 
-  	<script type="text/javascript" src="lawson.js"></script> 
-  	
+        <script src="js/three.js"></script>
+        <script src="js/controls/OrbitControls.js"></script>
+        <script src="js/LawsonGeometry.js"></script>
+        <script src="js/lawson.js"></script>
+
     <div id="panel">
 	    <div id="panelInside">
 		    <h1>Blake Courter</h1>
