--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		    <p><a href="http://blakecourter.com/poincare">Poincar&eacute; Kaleidoscope</a></p>
 		    <p><a href="http://blakecourter.com/four">Four.js</a></p>
 		    <p><a href="http://penrosetriangle.com/">Penrose Triangle</a></p>
+		    <p><a href="http://blakecourter.com/struttura">Struttura</a></p>
 		    <p><a href="http://github.com/bcourter">Github</a></p>
 		    
 		    <h2>Contact</h2>
